<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8">

                <TextView
                    android:id="@+id/login_title_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_48"
                    android:gravity="end"
                    android:text="@string/login_login"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintBottom_toTopOf="@id/login_text_login"
                    app:layout_constraintEnd_toStartOf="@id/login_title_mania"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <TextView
                    android:id="@+id/login_title_mania"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/login_mania"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorOnSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/login_title_login"
                    app:layout_constraintTop_toTopOf="@id/login_title_login" />

                <TextView
                    android:id="@+id/login_text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:text="@string/login_login"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@id/login_text_get_your_account"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/login_text_get_your_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:text="@string/login_get_to_account"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintBottom_toTopOf="@id/login_input_username"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:hint="@string/login_username"
                    app:layout_constraintBottom_toTopOf="@id/login_input_password"
                    app:startIconDrawable="@drawable/ic_person_outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:hint="@string/login_password"
                    app:layout_constraintBottom_toTopOf="@id/login_text_forgot_password"
                    app:startIconDrawable="@drawable/ic_outline_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/login_text_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_forgot_password"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintBottom_toTopOf="@id/login_button_login"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/login_button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="@string/login_login"
                    app:layout_constraintBottom_toTopOf="@id/login_button_sign_up" />

                <Button
                    android:id="@+id/login_button_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@string/login_sign_up"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/powered_by_appstand"
            android:textColor="?attr/colorPrimaryVariant" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>